--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,11 @@ target 'SpotifyInterface' do
 
   pod 'ReactNativeNavigation', :podspec => '../node_modules/react-native-navigation/ReactNativeNavigation.podspec'
 
+  # add the Firebase pod for Google Analytics
+  pod 'Firebase/Analytics'
+  # add pods for any other desired Firebase products
+  # https://firebase.google.com/docs/ios/setup#available-pods
+
   target 'SpotifyInterfaceTests' do
     inherit! :search_paths
     # Pods for testing
