--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^6.3.1",
+    "@react-native-firebase/auth": "^6.3.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-navigation": "^4.8.3"
