--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "dependencies": {
     "@react-native-firebase/app": "^6.3.1",
     "@react-native-firebase/auth": "^6.3.1",
+    "@types/jest": "^25.1.2",
+    "@types/react": "^16.9.19",
+    "@types/react-native": "^0.61.12",
+    "@types/react-test-renderer": "^16.9.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-navigation": "^4.8.3"
+    "react-native-navigation": "^4.8.3",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
