--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/react-test-renderer": "^16.9.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-elements": "^1.2.7",
     "react-native-navigation": "^4.8.3",
+    "react-native-vector-icons": "^6.6.0",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
