--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "android_nav": "cd ./android && ./gradlew app:assembleDebug && ./gradlew installDebug",
+    "android_nav": "cd android && gradlew app:assembleDebug && gradlew installDebug",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
