--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "android_nav": "cd android && gradlew app:assembleDebug && gradlew installDebug",
+    "android_nav": "cd ./android && ./gradlew app:assembleDebug && ./gradlew installDebug",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -21,6 +21,7 @@
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-navigation": "^4.8.3",
+    "react-native-simple-toast": "^1.0.0",
     "react-native-vector-icons": "^6.6.0",
     "typescript": "^3.7.5"
   },
