--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^25.1.2",
     "@types/react": "^16.9.19",
     "@types/react-native": "^0.61.12",
+    "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "^16.9.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -23,6 +24,8 @@
     "react-native-navigation": "^4.8.3",
     "react-native-simple-toast": "^1.0.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
