--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -7,6 +7,9 @@ project(':@react-native-firebase_app').projectDir = new File(rootProject.project
 include ':@react-native-firebase_auth'
 project(':@react-native-firebase_auth').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/auth/android')
 
+include ':react-native-linear-gradient'
+project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
+
 rootProject.name = 'SpotifyInterface'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
