--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-navigation": "^4.8.3",
     "react-native-simple-toast": "^1.0.0",
+    "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
