--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,9 @@ target 'SpotifyInterface' do
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
+
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'SpotifyInterfaceTests' do
     inherit! :search_paths
     # Pods for testing
