--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-navigation": "^4.8.3",
     "react-native-simple-toast": "^1.0.0",
+    "react-native-spotify-web-api": "^2.5.1",
     "react-native-svg": "^11.0.1",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^8.1.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "typescript": "^3.7.5"
