--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^25.1.2",
     "@types/react": "^16.9.19",
     "@types/react-native": "^0.61.12",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-test-renderer": "^16.9.2",
     "react": "16.9.0",
